kubernetes-project/argocd/prometheus/templates/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: prometheus
  name: prometheus
...
