kubernetes-project/argocd/prometheus/templates/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtualservice
spec:
  gateways:
  - prometheus-gateway
  hosts:
  - "garafana.shamrockoo4tune.ru"
  http:
  - route:
    - destination:
        host: prometheus-grafana
        port:
          number: 80
...
